--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,30 @@
 /****** General *****/
+@keyframes loader-line-animation {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+  }
+  20% {
+    transform: scaleY(1);
+  }
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes showContent {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    display: block;
+  }
+}
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -10,7 +36,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #2c3e50; 
+  background-color: #2c3e50;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,28 +65,23 @@ body {
   width: 100%;
   height: 100%;
   background-color: #fff;
-  border-radius: 5px; 
+  border-radius: 5px;
   transform-origin: 0 100%;
 }
-
-.loader-line:nth-child(1) { animation-delay: 0s; }
-.loader-line:nth-child(2) { animation-delay: 0.1s; }
-.loader-line:nth-child(3) { animation-delay: 0.2s; }
-.loader-line:nth-child(4) { animation-delay: 0.4s; }
-.loader-line:nth-child(5) { animation-delay: 0.6s; }
-
-@keyframes loader-line-animation {
-  0%, 40%, 100% {
-      transform: scaleY(0.4);
-  }
-  20% {
-      transform: scaleY(1.0);
-  }
+.loader-line:nth-child(1) {
+  animation-delay: 0s;
 }
-
-@keyframes fadeOut {
-  0% { opacity: 1; }
-  100% { opacity: 0; visibility: hidden; }
+.loader-line:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.loader-line:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.loader-line:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.loader-line:nth-child(5) {
+  animation-delay: 0.6s;
 }
 
 #content {
@@ -69,15 +90,9 @@ body {
   animation: showContent 3s forwards;
 }
 
-@keyframes showContent {
-  0% { opacity: 0; }
-  100% { opacity: 1; display: block; }
-}
-
 .heart-checkbox {
   display: none;
 }
-
 
 ul {
   list-style-type: none;
@@ -104,16 +119,6 @@ h1 {
   margin-bottom: 50px;
 }
 
-@media screen and (min-width: 767.98px) {
-  .container {
-    display: flex;
-    justify-content: center;
-  }
-  .flop {
-    display: none;
-  }
-}
-/*******HEADER*******/
 header {
   display: flex;
   justify-content: center;
@@ -131,7 +136,6 @@ header {
   height: 34px;
 }
 
-/*****BODY*****/
 .location {
   background-color: #EAEAEA;
   display: flex;
@@ -140,6 +144,7 @@ header {
   position: relative;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
 }
+
 .location__title {
   font-size: 16px;
   font-weight: 500;
@@ -150,18 +155,19 @@ header {
   padding-right: 17px;
 }
 
-/********FONCTIONNEMENT*******/
 .reservation {
   display: flex;
   flex-direction: column;
   text-align: center;
   background-color: #F6F6F6;
 }
+
 .reservation__title {
   font-size: 24px;
   font-weight: 700;
   padding-top: 10px;
 }
+
 .reservation__subtitle {
   font-size: 18px;
   font-weight: 300;
@@ -170,30 +176,6 @@ header {
 .operation {
   color: #000;
   padding: 18px;
-}
-.operation__line ul {
-  padding-left: 0;
-  text-align: center;
-}
-.operation__title {
-  font-size: 24px;
-  font-weight: 700;
-}
-.operation__button {
-  border-radius: 20px;
-  background-color: #F6F6F6;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  display: flex;
-  padding: 20px;
-  justify-content: center;
-  margin-bottom: 20px;
-  cursor: pointer;
-  position: relative;
-}
-.operation__text {
-  margin-left: 25px;
-  font-size: 16px;
-  font-weight: 500;
 }
 .operation .number {
   display: flex;
@@ -209,37 +191,34 @@ header {
   top: 18px;
 }
 
-@media screen and (min-width: 767.98px) {
-  .operation {
-    display: flex;
-    align-items: center;
-    text-align: center;
-  }
-  .operation__title {
-    display: flex;
-  }
-  .operation ul {
-    display: flex;
-    align-items: baseline;
-    gap: 22px;
-  }
-  .operation li {
-    padding-right: 30px;
-  }
-  .number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    background: #9356dc;
-    color: white;
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    left: 45px;
-  }
+.operation__line ul {
+  padding-left: 0;
+  text-align: center;
 }
-/********RESTAURANTS********/
+
+.operation__title {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.operation__button {
+  border-radius: 20px;
+  background-color: #F6F6F6;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  margin-bottom: 20px;
+  cursor: pointer;
+  position: relative;
+}
+
+.operation__text {
+  margin-left: 25px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
 .restaurants {
   background-color: #F6F6F6;
   padding: 18px;
@@ -252,13 +231,12 @@ header {
   width: 100%;
   position: relative;
 }
-
 .card img {
   border-radius: 20px 20px 0px 0px;
   width: 100%;
   height: 230px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   box-sizing: border-box;
 }
 
@@ -267,6 +245,7 @@ header {
   font-size: 18px;
   font-weight: 700;
 }
+
 .card-txt__subtitle {
   font-size: 17px;
   font-weight: 300;
@@ -283,51 +262,65 @@ header {
   font-weight: 500;
 }
 
-@media screen and (min-width: 767.98px) {
-  .restaurants {
-    position: relative;
-  }
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0;
-    align-items: flex-start;
-    align-self: stretch;
-  }
-  .first_line,
-  .second_line {
-    display: flex;
-    width: 80%;
-    gap: 20px;
-  }
-  .card {
-    display: flex;
-    width: 498px;
-    height: 251px;
-    position: relative;
-    flex-direction: column;
-    margin: 35px;
-  }
-  .card-txt {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-  }
-  .card img {
-    width: 498px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    height: 231px;
-  }
-}
 .fa-heart {
   background-color: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
+  cursor: pointer;
   position: absolute;
-  right: 16px;
+  bottom: 39px;
+  right: 28px;
+}
+
+@media (min-width: 767px) {
+  .fa-heart {
+    position: absolute;
+    bottom: 40px;
+    right: 28px;
+  }
+}
+.heart-checkbox:checked + .heart-label::before {
+  background: linear-gradient(180deg, rgb(151, 71, 255) 0%, rgb(228, 112, 218) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fa-heart:before {
+  content: "\f004";
+  z-index: 1;
+  font-size: 1.2em;
+  position: relative;
+}
+
+.fa-regular {
+  font-weight: 400;
+}
+
+.heart-label::before {
+  content: "\f004";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  position: absolute;
+  bottom: 25px;
+  right: 27px;
+  color: transparent;
+  font-size: 1.9em;
+  z-index: 5;
   cursor: pointer;
 }
 
-/*****FOOTER******/
+@media (max-width: 768px) {
+  .heart-label::before {
+    content: "\f004";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    bottom: 24px;
+    right: 27px;
+    color: transparent;
+    font-size: 1.9em;
+    z-index: 5;
+  }
+}
 Footer {
   background-color: #353535;
   color: white;
@@ -335,16 +328,98 @@ Footer {
   padding: 22px 20px;
   align-items: center;
 }
-
 Footer ul {
   padding: 0;
 }
-
 Footer li {
   cursor: pointer;
 }
 
+.footer-text {
+  display: flex;
+  align-items: center;
+}
+
+#LogoFooter {
+  width: 137px;
+  height: 27px;
+  filter: brightness(0) invert(1);
+  padding-top: 5px;
+}
+
+.fa-utensils {
+  color: #FFF;
+  padding-right: 10px;
+}
+
+.fa-handshake-angle {
+  color: #FFF;
+  padding-right: 10px;
+}
+
 @media screen and (min-width: 767.98px) {
+  .container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0;
+    align-items: flex-start;
+    align-self: stretch;
+  }
+  .flop {
+    display: none;
+  }
+  .operation {
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+  .operation ul {
+    display: flex;
+    align-items: baseline;
+    gap: 22px;
+  }
+  .operation li {
+    padding-right: 30px;
+  }
+  .operation__title {
+    display: flex;
+  }
+  .number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background: #9356dc;
+    color: white;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    left: 45px;
+  }
+  .restaurants {
+    position: relative;
+  }
+  .card {
+    display: flex;
+    width: 498px;
+    height: 315px;
+    position: relative;
+    flex-direction: column;
+    margin: 25px;
+  }
+  .card img {
+    width: 498px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    height: 231px;
+  }
+  .card-txt {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
   Footer {
     background-color: #353535;
     color: white;
@@ -360,21 +435,4 @@ Footer li {
   footer li {
     margin-left: 10px;
   }
-}
-.footer-text {
-  display: flex;
-  align-items: center;
-}
-
-#LogoFooter {
-  width: 137px;
-  height: 27px;
-  filter: brightness(0) invert(1);
-  padding-top: 5px;
-}
-
-.fa-utensils,
-.fa-handshake-angle {
-  color: #FFF;
-  padding-right: 10px;
 }/*# sourceMappingURL=main.css.map */
