--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,30 +1,126 @@
-$main-color: #9356DC;
-$secondary-color: #FF79DA;
-$third-color: #99E2D0;
-$light-grey: #F6F6F6;
-$black: #000;
-$white: #FFF;
-
-@mixin mobile-only {
-  @media screen and (max-width: 767.98px) {
-    @content;
-  }
-}
-
-@mixin desktop-version {
-  @media screen and (min-width: 767.98px) {
-    @content;
-  }
-}
+$color_1: inherit;
+$color_2: #000;
+$color_3: #FFF;
+$color_4: #353535;
+$color_5: white;
+$color_6: #3b8468;
+$font-family_1: "Roboto", sans-serif;
+$font-family_2: "Roboto";
+$background-color_1: #2c3e50;
+$background-color_2: #fff;
+$background-color_3: #EAEAEA;
+$background-color_4: #F6F6F6;
+$background-color_5: #FFF;
+$background-color_6: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
+$background-color_7: #353535;
 
 /****** General *****/
+@keyframes loader-line-animation {
+
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.4);
+  }
+
+  20% {
+    transform: scaleY(1.0);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes showContent {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+    display: block;
+  }
+}
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: $font-family_1;
 }
 
-.fa-arrow-left {
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $background-color_1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  z-index: 9999;
+  animation: fadeOut 1s forwards;
+}
+
+.loader-inner {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.loader-line-wrap {
+  width: 10px;
+  height: 60px;
+  position: relative;
+  transform-origin: center;
+  animation: loader-line-animation 1.2s ease-in-out infinite;
+}
+
+.loader-line {
+  width: 100%;
+  height: 100%;
+  background-color: $background-color_2;
+  border-radius: 5px;
+  transform-origin: 0 100%;
+
+  &:nth-child(1) {
+    animation-delay: 0s;
+  }
+
+  &:nth-child(2) {
+    animation-delay: 0.1s;
+  }
+
+  &:nth-child(3) {
+    animation-delay: 0.2s;
+  }
+
+  &:nth-child(4) {
+    animation-delay: 0.4s;
+  }
+
+  &:nth-child(5) {
+    animation-delay: 0.6s;
+  }
+}
+
+#content {
+  text-align: center;
+  display: none;
+  animation: showContent 3s forwards;
+}
+
+.heart-checkbox {
   display: none;
 }
 
@@ -33,13 +129,13 @@ ul {
 }
 
 a {
-  color: inherit;
+  color: $color_1;
   text-decoration: none;
 }
 
 h1 {
-  color: $black;
-  font-family: 'Roboto';
+  color: $color_2;
+  font-family: $font-family_2;
 }
 
 .cta {
@@ -48,69 +144,10 @@ h1 {
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   padding: 13px 18px;
   margin: auto;
-  color: $white;
+  color: $color_3;
   box-sizing: border-box;
   margin-bottom: 50px;
 }
-
-
-
-.flop {
-  display: none;
-}
-
-.heart-checkbox {
-  display: none;
-}
-
-/****LOADER*****/
-
-body {
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-  transition-delay: 1s;
-}
-
-.loader {
-  position: relative;
-  width: 80px;
-  height: 80px;
-  margin: 50px auto;
-}
-
-.loader::before,
-.loader::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  animation: rotate 2s linear infinite;
-}
-
-.loader::before {
-  border: 4px solid transparent;
-  border-top-color: #3498db;
-  animation-delay: -1s;
-}
-
-.loader::after {
-  border: 4px solid transparent;
-  border-bottom-color: #3498db;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-/*******HEADER*******/
 
 header {
   display: flex;
@@ -119,94 +156,56 @@ header {
   align-self: center;
   padding-top: 20px;
   padding-bottom: 15px;
-  box-shadow: 0px 2px 4px 0px #00000026;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
   position: relative;
   z-index: 3;
 }
-
 
 #LogoHeader {
   width: 200px;
   height: 34px;
 }
 
-/*****BODY*****/
 .location {
-  background-color: #EAEAEA;
+  background-color: $background-color_3;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  box-shadow: 0px 4px 4px 0px #00000040;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+}
 
-
-  &__title {
-    font-size: 16px;
-    font-weight: 500;
-    color: #353535;
-  }
+.location__title {
+  font-size: 16px;
+  font-weight: 500;
+  color: $color_4;
 }
 
 .fa-location-dot {
   padding-right: 17px;
 }
 
-/********FONCTIONNEMENT*******/
 .reservation {
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: $light-grey;
+  background-color: $background-color_4;
+}
 
-  &__title {
-    font-size: 24px;
-    font-weight: 700;
-    padding-top: 10px;
-  }
+.reservation__title {
+  font-size: 24px;
+  font-weight: 700;
+  padding-top: 10px;
+}
 
-  &__subtitle {
-    font-size: 18px;
-    font-weight: 300;
-  }
+.reservation__subtitle {
+  font-size: 18px;
+  font-weight: 300;
 }
 
 .operation {
-  display: flex;
-  margin-top: 80px;
-  background-color: $color_9;
-  height: 440px;
-  padding-left: 20px;
-  flex-direction: column;
-  color: $black;
+  color: $color_2;
   padding: 18px;
-
-  &__line ul {
-    padding-left: 0;
-    text-align: center;
-  }
-
-  &__title {
-    font-size: 24px;
-    font-weight: 700;
-  }
-
-  &__button {
-    border-radius: 20px;
-    background-color: $light-grey;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    display: flex;
-    padding: 20px;
-    justify-content: center;
-    margin-bottom: 20px;
-    cursor: pointer;
-    position: relative;
-  }
-
-  &__text {
-    margin-left: 25px;
-    font-size: 16px;
-    font-weight: 500;
-  }
 
   .number {
     display: flex;
@@ -214,7 +213,7 @@ header {
     justify-content: center;
     border-radius: 50px;
     background: #9356dc;
-    color: white;
+    color: $color_5;
     width: 25px;
     height: 25px;
     position: absolute;
@@ -223,157 +222,95 @@ header {
   }
 }
 
-@include desktop-version() {
-  .operation {
-    display: flex;
-    align-items: center;
+.operation__line {
+  ul {
+    padding-left: 0;
     text-align: center;
-
-    &__title {
-      display: flex;
-    }
-  }
-
-  .operation ul {
-    display: flex;
-    align-items: baseline;
-    gap: 22px;
-
-  }
-
-  .operation li {
-    padding-right: 30px;
-  }
-
-  .number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    background: #9356dc;
-    color: white;
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    left: 45px;
   }
 }
 
-/********RESTAURANTS********/
+.operation__title {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.operation__button {
+  border-radius: 20px;
+  background-color: $background-color_4;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  margin-bottom: 20px;
+  cursor: pointer;
+  position: relative;
+}
+
+.operation__text {
+  margin-left: 25px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
 .restaurants {
-  background-color: $light-grey;
+  background-color: $background-color_4;
   padding: 18px;
 }
 
 .card {
   border-radius: 15px;
-  background-color: $white;
+  background-color: $background-color_5;
   margin-bottom: 15px;
   width: 100%;
   position: relative;
-}
 
-.card img {
-  border-radius: 20px 20px 0px 0px;
-  width: 100%;
-  height: 230px;
-  object-fit: cover;
-  box-sizing: border-box;
+  img {
+    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    height: 230px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    box-sizing: border-box;
+  }
 }
 
 .card-txt {
   padding: 0px 0px 15px 15px;
   font-size: 18px;
   font-weight: 700;
+}
 
-  &__subtitle {
-    font-size: 17px;
-    font-weight: 300;
-  }
+.card-txt__subtitle {
+  font-size: 17px;
+  font-weight: 300;
 }
 
 .news {
-  width: 80px;
-  height: 29px;
-  background-color: #a9e0d1;
-  display: flex;
+  background: #a9e0d1;
+  color: $color_6;
+  border-radius: 2px;
+  padding: 7px 10px;
   position: absolute;
-  right: 30px;
-  z-index: 10;
-  margin-top: 10px;
-  border-radius: 3px;
-  box-shadow: 4px 2px transparent;
-  opacity: 0;
-  transition: opacity 1s linear;
-  animation: showElements 1s forwards 1s;
-}
-
-.nouveau {
-  color: #3b8468;
-  margin-top: 6px;
-  margin-left: 10px;
-  font-size: 14px;
+  top: 1rem;
+  right: 1rem;
   font-weight: 500;
-  line-height: 16px;
-  opacity: 0;
-  transition: opacity 1s linear;
-  animation: showElements 1s forwards 1s;
-}
-
-@keyframes showElements {
-  to {
-    opacity: 1;
-  }
-}
-
-.news {
-  width: 80px;
-  height: 29px;
-  background-color: $color_4;
-  display: flex;
-  position: absolute;
-  right: 30px;
-  z-index: 10;
-  margin-top: 20px;
-  border-radius: 3px;
-  box-shadow: 4px 2px transparent;
-  opacity: 0;
-  transition: opacity 1s linear;
-  animation: showElements 1s forwards 1s;
-}
-
-.nouveau {
-  margin-top: 6px;
-  margin-left: 10px;
-  color: $color_8;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 16px;
-  opacity: 0;
-  transition: opacity 1s linear;
-  animation: showElements 1s forwards 1s;
 }
 
 .fa-heart {
-  background-color: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
-  position: absolute;
-  right: 16px;
+  background-color: $background-color_6;
   cursor: pointer;
+  position: absolute;
+  bottom: 39px;
+  right: 28px;
 }
 
-.heart-label {
-  position: relative;
-  font-size: 24px;
-  cursor: pointer;
-}
+@media (min-width: 767px) {
 
-.heart-label::before {
-  content: '\f004';
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  position: absolute;
-  top: 2px;
-  color: transparent;
+  .fa-heart {
+    position: absolute;
+    bottom: 40px;
+    right: 28px;
+  }
 }
 
 .heart-checkbox:checked+.heart-label::before {
@@ -383,41 +320,60 @@ header {
   -webkit-text-fill-color: transparent;
 }
 
-/*****FOOTER******/
-
-Footer {
-  background-color: #353535;
-  color: white;
-  flex-direction: column;
-  padding: 22px 20px;
-  align-items: center;
+.fa-heart:before {
+  content: "\f004";
+  z-index: 1;
+  font-size: 1.2em;
+  position: relative;
 }
 
-Footer ul {
-  padding: 0;
+
+.fa-regular {
+  font-weight: 400;
 }
 
-Footer li {
+.heart-label::before {
+  content: '\f004';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  position: absolute;
+  bottom: 25px;
+  right: 27px;
+  color: transparent;
+  font-size: 1.9em;
+  ;
+  z-index: 5;
   cursor: pointer;
 }
 
-@include desktop-version() {
-  Footer {
-    background-color: #353535;
-    color: white;
-    padding: 22px 20px;
+@media (max-width: 768px) {
+  .heart-label::before {
+    content: '\f004';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    position: absolute;
+    bottom: 24px;
+    right: 27px;
+    color: transparent;
+    font-size: 1.9em;
+    ;
+    z-index: 5;
+  }
+}
+
+Footer {
+  background-color: $background-color_7;
+  color: $color_5;
+  flex-direction: column;
+  padding: 22px 20px;
+  align-items: center;
+
+  ul {
+    padding: 0;
   }
 
-  footer ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: stretch;
-    margin-bottom: 0;
-  }
-
-  footer li {
-    margin-left: 10px;
+  li {
+    cursor: pointer;
   }
 }
 
@@ -433,9 +389,108 @@ Footer li {
   padding-top: 5px;
 }
 
-
-.fa-utensils,
-.fa-handshake-angle {
-  color: $white;
+.fa-utensils {
+  color: $color_3;
   padding-right: 10px;
+}
+
+.fa-handshake-angle {
+  color: $color_3;
+  padding-right: 10px;
+}
+
+@media screen and (min-width: 767.98px) {
+  .container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0;
+    align-items: flex-start;
+    align-self: stretch;
+  }
+
+  .flop {
+    display: none;
+  }
+
+  .operation {
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    ul {
+      display: flex;
+      align-items: baseline;
+      gap: 22px;
+    }
+
+    li {
+      padding-right: 30px;
+    }
+  }
+
+  .operation__title {
+    display: flex;
+  }
+
+  .number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background: #9356dc;
+    color: $color_5;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    left: 45px;
+  }
+
+  .restaurants {
+    position: relative;
+  }
+
+
+  .card {
+    display: flex;
+    width: 498px;
+    height: 315px;
+    position: relative;
+    flex-direction: column;
+    margin: 25px;
+
+    img {
+      width: 498px;
+      -o-object-fit: cover;
+      object-fit: cover;
+      height: 231px;
+    }
+  }
+
+  .card-txt {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
+
+  Footer {
+    background-color: $background-color_7;
+    color: $color_5;
+    padding: 22px 20px;
+  }
+
+  footer {
+    ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: end;
+      align-items: stretch;
+      margin-bottom: 0;
+    }
+
+    li {
+      margin-left: 10px;
+    }
+  }
 }
