--- a/styles/menu.css
+++ b/styles/menu.css
@@ -155,13 +155,33 @@ nav {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   position: absolute;
-  bottom: 0px;
-  left: 1px;
+  bottom: -3px;
+  left: -1px;
   color: transparent;
-  font-size: 1.7em;
+  font-size: 1.9em;
   z-index: 5;
 }
 
+@media (min-width: 767px) {
+  .fa-heart {
+    padding-top: 35px;
+    padding-left: 20px;
+    position: absolute;
+    left: 15px;
+    top: -36px;
+  }
+  .heart-label::before {
+    content: "\f004";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    bottom: -15px;
+    left: 34px;
+    color: transparent;
+    font-size: 1.9em;
+    z-index: 5;
+  }
+}
 .heart-checkbox:checked + .heart-label::before {
   background: linear-gradient(180deg, rgb(151, 71, 255) 0%, rgb(228, 112, 218) 100%);
   -webkit-background-clip: text;
@@ -210,7 +230,6 @@ nav {
 .entries {
   display: flex;
   flex-direction: column;
-  padding-left: 20px;
   padding-right: 20px;
 }
 
@@ -342,20 +361,52 @@ footer ul {
   justify-content: end;
   align-items: stretch;
   margin-bottom: 0;
+  list-style: none;
 }
 
-footer li {
-  margin-left: 10px;
+@media (max-width: 768px) {
+  footer ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    list-style: none;
+  }
+  footer {
+    padding-left: 0;
+  }
+  #LogoFooter {
+    padding-left: 42px;
+  }
 }
-
+@media (min-width: 768px) {
+  #LogoFooter {
+    display: flex;
+    align-items: flex-end;
+    position: absolute;
+    right: 50px;
+  }
+  footer li {
+    margin-left: 10px;
+    position: relative;
+    left: 135px;
+  }
+  footer ul {
+    display: flex;
+    justify-content: center;
+  }
+  .second {
+    margin-left: 50px;
+  }
+}
 .footer-text {
   display: flex;
   align-items: center;
 }
 
 #LogoFooter {
-  width: 170px;
-  height: 27px;
+  width: 100px;
+  height: 20px;
   filter: brightness(0) invert(1);
   padding-top: 5px;
 }
