--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -242,6 +242,7 @@ nav {
 .title-part {
     opacity: 0;
     animation: fadeInUp 0.7s ease forwards;
+    padding-left: 12px;
 }
 
 .E {
@@ -387,7 +388,7 @@ nav {
         flex-direction: column;
         align-items: center;
         height: 69px;
-        width: 100%;
+        width:  350px;
 
     }
 
@@ -418,7 +419,7 @@ footer ul {
 }
 .footer-container {
     display: flex;
-
+    justify-content: center;
 }
 
 @media(max-width: 768px) {
