--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -22,7 +22,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', serif;
-
 }
 
 main {
@@ -369,7 +368,7 @@ nav {
     position: absolute;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
     .menu {
         display: flex;
         align-items: center;
@@ -379,6 +378,7 @@ nav {
 
     h1 {
         font-size: 25px;
+        padding-right: 130px;
     }
 
     .card {
@@ -458,8 +458,6 @@ footer ul {
 
     footer li {
         margin-left: 10px;
-        position: relative;
-        left: 135px;
     }
 
     footer ul {
@@ -472,6 +470,17 @@ footer ul {
     }
 
 }
+@media (min-width: 769px) and (max-width: 1300px) {
+    #LogoFooter {
+        position: relative;
+        right: 0;
+        margin-right: 20px;
+    }
+    .footer-container {
+      display: flex;
+    justify-content: start;
+    }
+  }
 
 .footer-text {
     display: flex;
