--- a/styles/main.scss
+++ b/styles/main.scss
@@ -361,6 +361,7 @@ header {
   }
 }
 
+
 Footer {
   background-color: #353535;
   color: white;
@@ -378,7 +379,7 @@ footer ul {
 }
 .footer-container {
   display: flex;
-justify-content: center;
+  justify-content: center;
 }
 
 @media(max-width: 768px) {
@@ -417,8 +418,6 @@ justify-content: center;
 
   footer li {
       margin-left: 10px;
-      position: relative;
-      left: 135px;
   }
 
   footer ul {
@@ -430,6 +429,17 @@ justify-content: center;
       margin-left: 50px;
   }
 
+}
+@media (min-width: 769px) and (max-width: 1300px) {
+  #LogoFooter {
+      position: relative;
+      right: 0;
+      margin-right: 20px;
+  }
+  .footer-container {
+    display: flex;
+  justify-content: start;
+  }
 }
 
 .footer-text {
