--- a/styles/main.scss
+++ b/styles/main.scss
@@ -114,12 +114,6 @@ body {
   }
 }
 
-#content {
-  text-align: center;
-  display: none;
-  animation: showContent 3s forwards;
-}
-
 .heart-checkbox {
   display: none;
 }
@@ -148,6 +142,7 @@ h1 {
   box-sizing: border-box;
   margin-bottom: 50px;
 }
+/******HEADER******/
 
 header {
   display: flex;
@@ -165,6 +160,8 @@ header {
   width: 200px;
   height: 34px;
 }
+
+/******LOCATION*****/
 
 .location {
   background-color: $background-color_3;
@@ -185,6 +182,8 @@ header {
   padding-right: 17px;
 }
 
+/******RESERVATION******/
+
 .reservation {
   display: flex;
   flex-direction: column;
@@ -202,6 +201,8 @@ header {
   font-size: 18px;
   font-weight: 300;
 }
+
+/******OPERATION******/
 
 .operation {
   color: $color_2;
@@ -252,6 +253,8 @@ header {
   font-weight: 500;
 }
 
+/*******RESTAURANTS*******/
+
 .restaurants {
   background-color: $background-color_4;
   padding: 18px;
@@ -278,12 +281,14 @@ header {
   padding: 0px 0px 15px 15px;
   font-size: 18px;
   font-weight: 700;
+
+  &__subtitle {
+    font-size: 17px;
+    font-weight: 300;
+  }
 }
 
-.card-txt__subtitle {
-  font-size: 17px;
-  font-weight: 300;
-}
+
 
 .news {
   background: #a9e0d1;
@@ -361,6 +366,7 @@ header {
   }
 }
 
+/*******FOOTER******/
 
 Footer {
   background-color: #353535;
@@ -430,7 +436,7 @@ footer ul {
   }
 
 }
-@media (min-width: 769px) and (max-width: 1300px) {
+@media (min-width: 769px)  {
   #LogoFooter {
       position: relative;
       right: 0;
